syntax = "proto3";

package tsunami_templated_detector_tests;

import "action_http_tests.proto";

option java_multiple_files = true;
option java_package = "com.google.tsunami.templatedplugin.proto.tests";

// Defines a set of unit test for a templated plugin.
message TemplatedPluginTests {
  message Config {
    // The reference to the name of the tested plugin. This will be used by the
    // engine to create the tests with the correct plugin.
    string tested_plugin = 1;
    // Whether the test should be disabled.
    bool disabled = 2;
  }

  message Test {
    message MockCallbackConfig {
      // Whether the callback server should be mocked.
      // Disabled by default.
      bool enabled = 1;

      // The return value for the callback server. That is, whether the callback
      // server reports the secret having been interracted with or not.
      // Only used if enabled is true.
      bool has_interaction = 2;
    }

    // The name of the test.
    string name = 1;

    // Whether this test ensure that the vulnerability is found or not.
    bool expect_vulnerability = 2;

    // Configuration for the mocking the callback server behavior.
    MockCallbackConfig mock_callback_server = 3;

    // The action being tested.
    oneof anyAction {
      HttpTestAction mock_http_server = 4;
    }
  }

  // Configuration for this set of unit tests. For example, the name of the
  // plugin being tested.
  Config config = 1;

  // The set of tests to run.
  repeated Test tests = 2;
}
